# hello-world

./: .gitignore  Cargo.toml  Makefile  result.txt
src/: file_service.rs  json_generate_script.rs  main.rs
