[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "^0.4"
chrono-tz = "0.5.3"
regex = "1.10.6"
reqwest = "0.12.5"
serde = "1.0.208"
serde_json = "1.0.125"
tokio = { version = "1", features = ["full"] }

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]



